Fix align

--- a/components/ir/cartes-impact/simple-card/impact-impots.module.scss
+++ b/components/ir/cartes-impact/simple-card/impact-impots.module.scss
@@ -18,7 +18,7 @@
   flex: 1;
   display: flex;
   justify-content: center;
-  padding-top: 15px;
+  padding-top: 5px;
 }
 
 .result {
